fixed width for individual glossary entries on mobile

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -399,3 +399,13 @@ body.limitedwidth #page.drawers .footer-popover {
     top: 70px!important;
   }
 }
+ 
+#page-mod-glossary-showentry #page-content {
+  min-width: auto;
+}
+
+@media (min-width: 768px) {  
+  #page-mod-glossary-showentry #page-content {
+    min-width: 600px;
+  }
+}
